# openstack-audit-middleware

./: .coveragerc  .gitignore  .stestr.conf  .testr.conf  .travis.yml  README.md  lower-constraints.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: CODEOWNERS
.github/workflows/: python-package.yml
auditmiddleware/: __init__.py  _api.py  _notifier.py  parsing_utils.py
auditmiddleware/tests/: __init__.py
auditmiddleware/tests/unit/: __init__.py  base.py  test_audit_api.py  test_audit_filter.py  test_audit_middleware.py  test_audit_oslo_messaging.py  test_http_methods.py  test_logging_notifier.py  test_mappings.py  utils.py
doc/: requirements.txt
etc/: barbican_audit_map.yaml  cinder_audit_map.yaml  designate_audit_map.yaml  glance_audit_map.yaml  ironic_audit_map.yaml  manila_audit_map.yaml  neutron_audit_map.yaml  nova_audit_map.yaml  octavia_audit_map.yaml  swift_audit_map.yaml
