[metadata]
name = openstack-audit-middleware
summary = Audit Middleware for OpenStack
description-file =
    README.md
author = SAP SE
author-email = joachim.barheine@sap.com
home-page = https://github.com/sapcc/openstack-audit-middleware
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    auditmiddleware

[extras]
audit_notifications =
  oslo.messaging!=5.25.0,>=5.24.2 # Apache-2.0

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
paste.filter_factory =
    audit = auditmiddleware.audit:filter_factory

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes = setup.py

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = auditmiddleware/locale
domain = auditmiddleware

[update_catalog]
domain = auditmiddleware
output_dir = auditmiddleware/locale
input_file = auditmiddleware/locale/auditmiddleware.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = auditmiddleware/locale/auditmiddleware.pot

[wheel]
universal = 1
